# poly-basis-ml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: optuna_tuning.py
src/poly_basis_ml/: __init__.py  _vandermonde.py  expanders.py  interactions.py  model_tree.py  poly_basis_regr.py  regressor.py
tests/: test_expander.py  test_model_tree.py  test_regressor.py  test_sklearn_compliance_02feb26.py
